# job_parser

./: README.md  pyproject.toml  run.py
cfg/: file_path.py
src/: csv_job_file.py  excel_job_file.py  exel_job_file.py  func.py  headhunter.py  json_job_file.py  mixin.py  superjob.py  trudvsem.py  txt_job_file.py  vacancy.py
src/abc/: abc_job_api.py  abc_job_file.py
src/func/: beautiful_table.py  ensure_file_exists.py  func.py  prints.py  process_digits.py  run_user_interface.py  save_file.py
