[tool.poetry]
name = "job-parser"
version = "0.1.0"
description = ""
authors = ["electr0n4ik <andreyshka3@gmail.com>"]
readme = "README.md"
packages = [{include = "job_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
